# accumulation_agent

./: .gitignore  ABAS_PLAN_v2.md  ABAS_PLAN_v2_VI.md  AGENTS.md  AGENTS_CONFIG.md  AGENTS_CONVENTIONS.md  AGENTS_REPO.md  AGENTS_SAFETY.md  AGENTS_SPECS.md  CHANGELOG.md  README.md  TASK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: production.json
src/: config.py
src/backtest/: harness.py
src/custody/: sweeper.py
src/data/: __init__.py  ingester.py  validators.py
src/execution/: ccxt_mock.py  orchestrator.py
src/features/: engine.py
src/grid/: engine.py
src/inventory/: ledger.py  models.py
src/monitoring/: exporter.py
src/portfolio/: tracker.py
src/risk/: overlay.py
src/utils/: db.py  init_db.py  logging.py
tests/: conftest.py  test_backtest.py  test_config.py  test_custody.py  test_data.py  test_features.py  test_grid.py  test_inventory.py  test_monitoring.py  test_orchestrator.py  test_portfolio.py  test_risk.py
