[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abas"
version = "2.0.0"
description = "Adaptive BTC Accumulation System — v2"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Antigravity Agent", email = "agent@antigravity.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ccxt>=4.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.6",
    "redis>=4.5.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "hypothesis>=6.75.0",
    "ruff>=0.0.260",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
